# minigrep

./: Cargo.toml  README.md  input.txt  poem.txt  test  test.c
src/: lib.rs  main.rs
