[package]
name = "minigrep_improved"
description = "A command line tool to search for a string in a file"
version = "0.1.0"
edition = "2021"
authors = ["TomZz"]
license = "MIT"
repository = "https://github.com/rust-kotlin/minigrep_improved"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0 # opt-level: 0-3

[profile.release]
opt-level = 3